--- a/package.json
+++ b/package.json
@@ -1,46 +1,31 @@
 {
   "name": "pikalyrics",
   "version": "0.1.0",
-  "description": "Open Source music video subititle generator & provider",
-  "main": "build/index.js",
+  "private": true,
   "scripts": {
-    "build": "tsc",
-    "start": "node build/main.js",
-    "dev": "watchexec -w src/ -e ts -r 'node -r @swc-node/register src/main.ts'"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/KRTirtho/pikalyrics.git"
-  },
-  "keywords": [
-    "vosk",
-    "music",
-    "lyrics",
-    "subtitle"
-  ],
-  "author": "Kingkor Roy Tirtho",
-  "license": "BSD-4-Clause",
-  "bugs": {
-    "url": "https://github.com/KRTirtho/pikalyrics/issues"
-  },
-  "homepage": "https://github.com/KRTirtho/pikalyrics#readme",
   "dependencies": {
-    "async": "^3.2.4",
-    "axios": "^0.27.2",
-    "fastify": "^4.0.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "mongoose": "^6.3.6",
-    "subtitle": "^4.1.2",
-    "vosk": "^0.3.39",
-    "wav": "^1.0.2",
-    "youtube-dl-exec": "^2.0.12"
+    "@chakra-ui/react": "^2.2.4",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^6",
+    "next": "12.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
-    "@swc-node/register": "^1.5.1",
-    "@types/async": "^3.2.13",
-    "@types/fluent-ffmpeg": "^2.1.20",
-    "@types/wav": "^1.0.1",
-    "prettier": "^2.6.2",
-    "typescript": "^4.7.3"
+    "@babel/core": "^7.18.9",
+    "@types/node": "18.6.2",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
+    "eslint": "8.20.0",
+    "eslint-config-next": "12.2.3",
+    "eslint-config-prettier": "^8.5.0",
+    "typescript": "4.7.4"
   }
 }
