--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "dayjs": "^1.11.4",
     "framer-motion": "^6",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-hotkeys-hook": "^3.4.7",
+    "react-icons": "^4.4.0",
+    "react-textarea-autosize": "^8.3.4",
+    "react-youtube": "^9.0.3",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
