--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "^4.1.1",
     "dayjs": "^1.11.4",
     "framer-motion": "^6",
+    "get-youtube-id": "^1.0.1",
     "next": "12.2.3",
+    "next-auth": "^4.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hotkeys-hook": "^3.4.7",
@@ -31,6 +35,7 @@
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "eslint-config-prettier": "^8.5.0",
+    "prisma": "^4.1.1",
     "typescript": "4.7.4"
   }
 }
